[package]
name        = "wasm_rs"
version     = "0.1.0"
authors     = ["sandeep <sandeep.bagchi@gmail.com>"]
edition     = "2018"
description = ""
repository  = ""
license     = ""

[dependencies]
wasm-bindgen = "0.2"
js-sys       = "0.3"
wee_alloc    = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'Window',
    'Location',
    'Document',
    'DocumentFragment',
    'Node',
    'Element',
    'HtmlElement',
]

[lib]
crate-type = ["cdylib"]
